src/bootstrap/test/v0_8/rejects/05_import_missing_stdlib/main.zg
# requires: v0.8
import "std/foo"

print 1
